# Kiff

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac
app/: Makefile.am  main.c
include/libkiff/: kiff_window.h
libkiff/: Makefile.am  kiff_window.c
